[gd_scene load_steps=2 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="portLabel" type="RichTextLabel" parent="."]
margin_left = 200.0
margin_top = 200.0
margin_right = 250.0
margin_bottom = 220.0
rect_scale = Vector2( 2, 2 )
text = "Port :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ipLabel" type="RichTextLabel" parent="."]
margin_left = 200.0
margin_top = 100.0
margin_right = 275.0
margin_bottom = 120.0
rect_scale = Vector2( 2, 2 )
text = "IP address :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="players" type="RichTextLabel" parent="."]
margin_left = 1200.0
margin_top = 100.0
margin_right = 1500.0
margin_bottom = 200.0
rect_scale = Vector2( 2, 2 )
text = "Players :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="."]
visible = false
margin_left = 1200.0
margin_top = 700.0
margin_right = 1300.0
margin_bottom = 750.0
rect_scale = Vector2( 2, 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ip" type="LineEdit" parent="."]
margin_left = 360.0
margin_top = 90.0
margin_right = 480.0
margin_bottom = 115.0
rect_scale = Vector2( 2, 2 )
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="port" type="LineEdit" parent="."]
margin_left = 360.0
margin_top = 190.0
margin_right = 418.0
margin_bottom = 215.0
rect_scale = Vector2( 2, 2 )
text = "3000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" type="Button" parent="."]
margin_left = 200.0
margin_top = 700.0
margin_right = 280.0
margin_bottom = 740.0
rect_scale = Vector2( 2, 2 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host" type="Button" parent="."]
margin_left = 400.0
margin_top = 700.0
margin_right = 480.0
margin_bottom = 740.0
rect_scale = Vector2( 2, 2 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="connection_status" type="RichTextLabel" parent="."]
margin_left = 200.0
margin_top = 250.0
margin_right = 500.0
margin_bottom = 300.0
rect_scale = Vector2( 2, 2 )
custom_colors/default_color = Color( 1, 0.0823529, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Button" parent="."]
margin_left = 1344.99
margin_top = 708.768
margin_right = 1424.99
margin_bottom = 748.768
rect_scale = Vector2( 2, 2 )
text = "Inventory"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Decks" type="Button" parent="."]
margin_left = 1345.56
margin_top = 820.902
margin_right = 1425.56
margin_bottom = 860.902
rect_scale = Vector2( 2, 2 )
text = "Decks"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Inventory" to="." method="_on_Inventory_pressed"]
[connection signal="pressed" from="Decks" to="." method="_on_Decks_pressed"]
